tests/paczka1/small_fuzzy/79551293.err
Error in line 4: Qd1cuiF A611 -3,5
Error in line 2: Qd1cuiF A611 41,6
Error in line 1: A611 A699 88,2
Error in line 7: Qd1cuiF A698 6,9
Error in line 11: ib7uJkElK A611 87,8
